<resources>
    <string name="app_name" translatable="false">ClouD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">Or</string>
    <string name="reset_your_password">Reset your password?</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="user_name">User Name</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">BACK</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="register_suggest">Are you new user?</string>
    <string name="login">LOGIN</string>
    <string name="language">EN</string>
    <string name="register">Register</string>
    <string name="press_alert">Press again to exit!</string>
    <string name="weather_status" translatable="false">Mostly Cloudy</string>
    <string name="data_time" translatable="false">Mon Oct 16 | 08:00 AM</string>
    <string name="curr_temp" translatable="false">25</string>
    <string name="degree_symbol" translatable="false">°</string>
    <string name="greed_user">Hi,</string>
    <string name="form_warning">This field required!</string>
    <string name="password_warning">Password do not match!</string>
    <string name="signup_warning">Can not sign up!</string>
    <string name="email_invalid">Enter valid email!</string>
    <string name="password_error">Password not match!</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="username_or_email">Username or email</string>
    <string name="success_warning">Success!</string>
    <string name="new_password">New password</string>
    <string name="change">Save</string>
    <string name="old_password">Old password</string>
    <string name="reset">Reset</string>
    <string name="rainfall_sample" translatable="false">22%</string>
    <string name="humidity_sample" translatable="false">66%</string>
    <string name="today">Today</string>
    <string name="windSpeed">Wind speed</string>
    <string name="windSpeed_sample" translatable="false">4.3 Km/h</string>
    <string name="humidity">Humidity</string>
    <string name="rainfall">Rain fall</string>
    <string name="wind_direction">Wind direction</string>
    <string name="wind_dir_sample" translatable="false">80</string>
    <string name="uiot" translatable="false">UIOT</string>
    <string name="manufacture">Manufacturer</string>
    <string name="location">Location</string>
    <string name="location_sample" translatable="false">Bien Hoa</string>
    <string name="unknown" translatable="false">---</string>
    <string name="key_validity">Key validity</string>
    <string name="cloudy">Cloudy Sky</string>
    <string name="sunny_cloudy">Sunny Cloudy Sky</string>
    <string name="sunny">Sunny Sky</string>
    <string name="rainy">Chance of rain</string>
    <string name="windy">Strong wind</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="realm" translatable="false">Realm</string>
    <string name="email" translatable="false">Email</string>
    <string name="status">Status</string>
    <string name="enabled">Enabled</string>
    <string name="history">History</string>
    <string name="create_on">Create on</string>
    <string name="continue_using">CONTINUE WITHOUT SIGN IN</string>
    <string name="continue_log">Your credential expired!</string>
    <string name="connect_to_drive">CONNECT TO DRIVE</string>
    <string name="home">Home</string>
    <string name="feature">Feature</string>
    <string name="chart">Chart</string>
    <string name="user">User</string>
    <string name="opp">Opp!</string>
    <string name="retry">Retry</string>
    <string name="statistics">Statistics</string>
    <string name="select">Select</string>
    <string name="show_chart">Show chart</string>
    <string name="please_select_an_option">Please select an option</string>
</resources>