<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".Activity.DashboardActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/greed_user"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_weaSta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_status"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/img_currWea"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/cloudy_sunny"/>

            <TextView
                android:id="@+id/tv_dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:text="@string/data_time"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="63sp"
                    android:textStyle="bold"
                    android:text="@string/curr_temp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_temp"
                    android:textColor="@color/white"
                    android:textSize="63sp"
                    android:textStyle="bold"
                    android:text="@string/degree_symbol"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>