<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".Activity.DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/greed_user"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_greed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/unknown"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_weaSta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_currWea"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/cloudy_sunny" />

            <TextView
                android:id="@+id/tv_dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/unknown"
                    android:textColor="@color/white"
                    android:textSize="63sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_temp"
                    android:text="@string/degree_symbol"
                    android:textColor="@color/white"
                    android:textSize="63sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_highLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/background_main_2"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_rainfall"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/rain"/>

                    <TextView
                        android:id="@+id/tv_rainfallPercent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@string/rainfall"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_humidity"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/humidity"/>

                    <TextView
                        android:id="@+id/tv_humidPercent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@string/humidity"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_windSpeed"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/wind"/>

                    <TextView
                        android:id="@+id/tv_windSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@string/windSpeed"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:paddingBottom="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_windDir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:src="@mipmap/icon_dir"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="@string/wind_direction"/>

                    <TextView
                        android:id="@+id/tv_windDir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:gravity="end|center"
                        android:textStyle="bold"
                        android:text="@string/unknown"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_button_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_manufacture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/icon_malnu"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="@string/manufacture"/>

                    <TextView
                        android:id="@+id/tv_manufacture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:textStyle="bold"
                        android:gravity="end|center"
                        android:text="@string/unknown"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_button_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/icon_location"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="@string/location"/>

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:textStyle="bold"
                        android:gravity="end|center"
                        android:text="@string/unknown"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_button_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/icon_key"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="@string/key_validity"/>

                    <TextView
                        android:id="@+id/tv_key"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:textStyle="bold"
                        android:gravity="end|center"
                        android:text="@string/unknown"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>