<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37286E"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_bgColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/back_3" />

            <ImageView
                android:id="@+id/img_bgImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/logo2" />

            <ImageButton
                android:id="@+id/btn_changeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                app:srcCompat="@mipmap/icon_eng"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="Change Language" />
            <WebView
                android:id="@+id/wv_browser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_01"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="#ffffff"
            android:textColorHint="#808080" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_resetPassword"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:text="@string/reset"
                android:textColor="#ffffff" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@drawable/background_button_2"
                android:text="@string/back"
                android:textColor="#7164FF" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
